[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-scadeone-core"
dynamic = ["version"]
description = "Pythonic Ansys Scade One"
readme = "README.rst"
requires-python = ">=3.7,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Indirect dependencies,
    "attrs==24.2.0",
    "cffi==1.17.1",
    "clr-loader==0.2.6",
    "jsonschema-specifications==2023.12.1",
    "MarkupSafe==2.1.5",
    "pycparser==2.22",
    "referencing==0.35.1",
    "rpds-py==0.20.0",
    # Direct dependencies,
    "Jinja2==3.1.4",
    "jsonschema==4.23.0",
    "platformdirs==4.3.2",
    "pyparsing==3.1.4",
    "pythonnet==3.0.4",
    "typing_extensions==4.12.2",
]

[project.optional-dependencies]
tests = ["pytest>=7.1.0", "pytest-cov>=3.0.0", "click>=8.1.7", "fmpy>=0.3.21"]
doc = [
    "ansys-sphinx-theme==1.2.1",
    "numpy==2.1.3",
    "numpydoc==1.8.0",
    "pillow>=10.1",
    "sphinx==8.1.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-design==0.6.1",
    "pytest-sphinx==0.5.0",
    "sphinx-jinja>=2.0.0",
]
checks = ["codespell==2.2.6", "flake8==6.1.0"]

[project.urls]
Source = "https://github.com/ansys/pyscadeone"
Issues = "https://github.com/ansys/pyscadeone/issues"
Documentation = "https://scadeone.docs.pyansys.com"
Tracker = "https://github.com/ansys/pyscadeone/issues"

[project.scripts]
pyscadeone = "ansys.scadeone.core.cli:main"
stpimporter = "ansys.scadeone.core.svc.simdata.stpimporter:cmd_parse"

[tool.flit.module]
name = "ansys.scadeone.core"

# Formatting
[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ipynb,flycheck*,./.git/*,*.yml,doc/_build/*,doc/images/*,dist/*'
ignore-words = "spelling_ok.txt"
quiet-level = 3

# Test & Coverage
[tool.coverage.run]
source = ["pyscadeone"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
log_file = "logs/pytest-logs.txt"
